--- a/SchipholApp/SupportingFiles/de.lproj/LaunchScreen.strings
+++ b/SchipholApp/SupportingFiles/de.lproj/LaunchScreen.strings
@@ -1,3 +1,3 @@
 
 /* Class = "UILabel"; text = "Schiphol Airport"; ObjectID = "6ql-N7-tI9"; */
-"6ql-N7-tI9.text" = "Schiphol Airport";
+"6ql-N7-tI9.text" = "Flughafen Schiphol";
