Fix strings typo

--- a/SchipholApp/SupportingFiles/de.lproj/Localizable.strings
+++ b/SchipholApp/SupportingFiles/de.lproj/Localizable.strings
@@ -12,4 +12,4 @@
 "nearest_Airport" = "Nächster Flughafen";
 "map" = "Karte";
 "airports" = "Flughäfen";
-"Airlines" = "Fluggesellschaften";
+"airlines" = "Fluggesellschaften";
