--- a/SchipholApp/SupportingFiles/en.lproj/Localizable.strings
+++ b/SchipholApp/SupportingFiles/en.lproj/Localizable.strings
@@ -12,4 +12,4 @@
 "nearest_Airport" = "Nearest Airport";
 "map" = "Map";
 "airports" = "Airports";
-"Airlines" = "Airlines";
+"airlines" = "Airlines";
